--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -8,5 +8,17 @@
     "/js/app.25f4409bf6171903f2ed.hot-update.js": "/js/app.25f4409bf6171903f2ed.hot-update.js",
     "/js/app.7ba5fdd0e838bb283561.hot-update.js": "/js/app.7ba5fdd0e838bb283561.hot-update.js",
     "/js/app.e67b292f15c0adc2abf2.hot-update.js": "/js/app.e67b292f15c0adc2abf2.hot-update.js",
-    "/js/app.e7756614c3ec397a4704.hot-update.js": "/js/app.e7756614c3ec397a4704.hot-update.js"
+    "/js/app.e7756614c3ec397a4704.hot-update.js": "/js/app.e7756614c3ec397a4704.hot-update.js",
+    "/js/app.d2526d82dbe8a2763953.hot-update.js": "/js/app.d2526d82dbe8a2763953.hot-update.js",
+    "/js/app.3e494fde24e30fdeec33.hot-update.js": "/js/app.3e494fde24e30fdeec33.hot-update.js",
+    "/js/app.5f81ed031512ed410a8d.hot-update.js": "/js/app.5f81ed031512ed410a8d.hot-update.js",
+    "/js/app.dc898c3e5f42befb6b40.hot-update.js": "/js/app.dc898c3e5f42befb6b40.hot-update.js",
+    "/js/app.6401240b6612a8763f8b.hot-update.js": "/js/app.6401240b6612a8763f8b.hot-update.js",
+    "/js/app.c410a46c543f36ccbb34.hot-update.js": "/js/app.c410a46c543f36ccbb34.hot-update.js",
+    "/js/app.dcc6dc505dfa52448af8.hot-update.js": "/js/app.dcc6dc505dfa52448af8.hot-update.js",
+    "/js/app.71eab1abae5e5a21bb79.hot-update.js": "/js/app.71eab1abae5e5a21bb79.hot-update.js",
+    "/js/app.80be8f476a60322dbb5c.hot-update.js": "/js/app.80be8f476a60322dbb5c.hot-update.js",
+    "/js/app.90f7b17b1133f8b369ed.hot-update.js": "/js/app.90f7b17b1133f8b369ed.hot-update.js",
+    "/js/app.6376267f7933e0a3e978.hot-update.js": "/js/app.6376267f7933e0a3e978.hot-update.js",
+    "/js/app.50c5551e0a6c1cba2de6.hot-update.js": "/js/app.50c5551e0a6c1cba2de6.hot-update.js"
 }
