Adding categories views

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -20,5 +20,11 @@
     "/js/app.80be8f476a60322dbb5c.hot-update.js": "/js/app.80be8f476a60322dbb5c.hot-update.js",
     "/js/app.90f7b17b1133f8b369ed.hot-update.js": "/js/app.90f7b17b1133f8b369ed.hot-update.js",
     "/js/app.6376267f7933e0a3e978.hot-update.js": "/js/app.6376267f7933e0a3e978.hot-update.js",
-    "/js/app.50c5551e0a6c1cba2de6.hot-update.js": "/js/app.50c5551e0a6c1cba2de6.hot-update.js"
+    "/js/app.50c5551e0a6c1cba2de6.hot-update.js": "/js/app.50c5551e0a6c1cba2de6.hot-update.js",
+    "/js/app.4db1db10d69ee124b33e.hot-update.js": "/js/app.4db1db10d69ee124b33e.hot-update.js",
+    "/js/app.92b1d197d2cd8090f3b8.hot-update.js": "/js/app.92b1d197d2cd8090f3b8.hot-update.js",
+    "/js/app.d0479b51b23e33756aaf.hot-update.js": "/js/app.d0479b51b23e33756aaf.hot-update.js",
+    "/js/app.f12f8a7f59f6edb0c0a1.hot-update.js": "/js/app.f12f8a7f59f6edb0c0a1.hot-update.js",
+    "/js/app.e7d48349e34d383933f6.hot-update.js": "/js/app.e7d48349e34d383933f6.hot-update.js",
+    "/js/app.fc42f528b837dc3e79ec.hot-update.js": "/js/app.fc42f528b837dc3e79ec.hot-update.js"
 }
