Adding statuses views

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,11 @@
 {
     "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/css/app.css": "/css/app.css",
+    "/js/app.6f8c83c585bad1baa580.hot-update.js": "/js/app.6f8c83c585bad1baa580.hot-update.js",
+    "/js/app.871d18563058077acd05.hot-update.js": "/js/app.871d18563058077acd05.hot-update.js",
+    "/js/app.58daff86a6dd2e43e558.hot-update.js": "/js/app.58daff86a6dd2e43e558.hot-update.js",
+    "/js/app.c9904f32000a08faa634.hot-update.js": "/js/app.c9904f32000a08faa634.hot-update.js",
+    "/js/app.87263d963a869e762ac0.hot-update.js": "/js/app.87263d963a869e762ac0.hot-update.js",
+    "/js/app.851ce0ca2dba171115a4.hot-update.js": "/js/app.851ce0ca2dba171115a4.hot-update.js",
+    "/js/app.58e1aa8fd55c421f5a3a.hot-update.js": "/js/app.58e1aa8fd55c421f5a3a.hot-update.js"
 }
