Adding product views

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -7,5 +7,66 @@
     "/js/app.c9904f32000a08faa634.hot-update.js": "/js/app.c9904f32000a08faa634.hot-update.js",
     "/js/app.87263d963a869e762ac0.hot-update.js": "/js/app.87263d963a869e762ac0.hot-update.js",
     "/js/app.851ce0ca2dba171115a4.hot-update.js": "/js/app.851ce0ca2dba171115a4.hot-update.js",
-    "/js/app.58e1aa8fd55c421f5a3a.hot-update.js": "/js/app.58e1aa8fd55c421f5a3a.hot-update.js"
+    "/js/app.58e1aa8fd55c421f5a3a.hot-update.js": "/js/app.58e1aa8fd55c421f5a3a.hot-update.js",
+    "/js/app.acd395afcaabb884fccf.hot-update.js": "/js/app.acd395afcaabb884fccf.hot-update.js",
+    "/js/app.c646121868ba6e64ce7b.hot-update.js": "/js/app.c646121868ba6e64ce7b.hot-update.js",
+    "/js/app.39ea0fc61cf94264bd53.hot-update.js": "/js/app.39ea0fc61cf94264bd53.hot-update.js",
+    "/js/app.62ef085c11b1e6d65100.hot-update.js": "/js/app.62ef085c11b1e6d65100.hot-update.js",
+    "/js/app.45222285656b118b6dd9.hot-update.js": "/js/app.45222285656b118b6dd9.hot-update.js",
+    "/js/app.df3d7af9b48af7854bc7.hot-update.js": "/js/app.df3d7af9b48af7854bc7.hot-update.js",
+    "/js/app.e6164de26ee1d8a4259b.hot-update.js": "/js/app.e6164de26ee1d8a4259b.hot-update.js",
+    "/js/app.08224f386a385dc3e8ab.hot-update.js": "/js/app.08224f386a385dc3e8ab.hot-update.js",
+    "/js/app.033a0faf4ea785c46f92.hot-update.js": "/js/app.033a0faf4ea785c46f92.hot-update.js",
+    "/js/app.b94a322876d9f8a5d41e.hot-update.js": "/js/app.b94a322876d9f8a5d41e.hot-update.js",
+    "/js/app.8e5dc12de121a6b076c5.hot-update.js": "/js/app.8e5dc12de121a6b076c5.hot-update.js",
+    "/js/app.f226946592a7fbfa3da3.hot-update.js": "/js/app.f226946592a7fbfa3da3.hot-update.js",
+    "/js/app.3e2bd40328ab19113e35.hot-update.js": "/js/app.3e2bd40328ab19113e35.hot-update.js",
+    "/js/app.3cfff0256ed1aa844f6c.hot-update.js": "/js/app.3cfff0256ed1aa844f6c.hot-update.js",
+    "/js/app.9895f9ce7c42dd1f6c6d.hot-update.js": "/js/app.9895f9ce7c42dd1f6c6d.hot-update.js",
+    "/js/app.cd904d7549f9620f3f4c.hot-update.js": "/js/app.cd904d7549f9620f3f4c.hot-update.js",
+    "/js/app.b4150ae822a44905cfc9.hot-update.js": "/js/app.b4150ae822a44905cfc9.hot-update.js",
+    "/js/app.81ff31047eed8db573db.hot-update.js": "/js/app.81ff31047eed8db573db.hot-update.js",
+    "/js/app.1c80b8d66bc6149bdce2.hot-update.js": "/js/app.1c80b8d66bc6149bdce2.hot-update.js",
+    "/js/app.8b8f92dea498c2c6f0c6.hot-update.js": "/js/app.8b8f92dea498c2c6f0c6.hot-update.js",
+    "/js/app.93a4d7b6ae2400418f97.hot-update.js": "/js/app.93a4d7b6ae2400418f97.hot-update.js",
+    "/js/app.0754e4bf9e813aade3ec.hot-update.js": "/js/app.0754e4bf9e813aade3ec.hot-update.js",
+    "/js/app.a32d4088840703e69eb6.hot-update.js": "/js/app.a32d4088840703e69eb6.hot-update.js",
+    "/js/app.d74e352048a694065465.hot-update.js": "/js/app.d74e352048a694065465.hot-update.js",
+    "/js/app.3eb3c8a94764a044ba9e.hot-update.js": "/js/app.3eb3c8a94764a044ba9e.hot-update.js",
+    "/js/app.597648e589b8a2788d59.hot-update.js": "/js/app.597648e589b8a2788d59.hot-update.js",
+    "/js/app.b2b48a9c6c9f0c5402d2.hot-update.js": "/js/app.b2b48a9c6c9f0c5402d2.hot-update.js",
+    "/js/app.2f911bbeecc07b515759.hot-update.js": "/js/app.2f911bbeecc07b515759.hot-update.js",
+    "/js/app.acd0f1a24c91e4b10085.hot-update.js": "/js/app.acd0f1a24c91e4b10085.hot-update.js",
+    "/js/app.394a7737ad56b730272d.hot-update.js": "/js/app.394a7737ad56b730272d.hot-update.js",
+    "/js/app.8ef0d3afea29e7853e5a.hot-update.js": "/js/app.8ef0d3afea29e7853e5a.hot-update.js",
+    "/js/app.92fa01abd62793b7da62.hot-update.js": "/js/app.92fa01abd62793b7da62.hot-update.js",
+    "/js/app.cc90d99dda9bf5e438dd.hot-update.js": "/js/app.cc90d99dda9bf5e438dd.hot-update.js",
+    "/js/app.567064a58d871b45c06f.hot-update.js": "/js/app.567064a58d871b45c06f.hot-update.js",
+    "/js/app.617081a34fd8b23d66d5.hot-update.js": "/js/app.617081a34fd8b23d66d5.hot-update.js",
+    "/js/app.17af54444effc70f4940.hot-update.js": "/js/app.17af54444effc70f4940.hot-update.js",
+    "/js/app.c1dff04ab033b71ea865.hot-update.js": "/js/app.c1dff04ab033b71ea865.hot-update.js",
+    "/js/app.f7d1780415ba6092a39e.hot-update.js": "/js/app.f7d1780415ba6092a39e.hot-update.js",
+    "/js/app.5ec39e98c76275ec6ee2.hot-update.js": "/js/app.5ec39e98c76275ec6ee2.hot-update.js",
+    "/js/app.4de614e01ec726b66dc2.hot-update.js": "/js/app.4de614e01ec726b66dc2.hot-update.js",
+    "/js/app.6ce16d7f6ce6958418d3.hot-update.js": "/js/app.6ce16d7f6ce6958418d3.hot-update.js",
+    "/js/app.8ebb4af6b02227da6a8f.hot-update.js": "/js/app.8ebb4af6b02227da6a8f.hot-update.js",
+    "/js/app.2c71ba6fa39780f0a834.hot-update.js": "/js/app.2c71ba6fa39780f0a834.hot-update.js",
+    "/js/app.a36a3ec8dc9ca29dc63a.hot-update.js": "/js/app.a36a3ec8dc9ca29dc63a.hot-update.js",
+    "/js/app.91e9597053623642f276.hot-update.js": "/js/app.91e9597053623642f276.hot-update.js",
+    "/js/app.89f3ef7c842499728217.hot-update.js": "/js/app.89f3ef7c842499728217.hot-update.js",
+    "/js/app.427b403935f051b18a9e.hot-update.js": "/js/app.427b403935f051b18a9e.hot-update.js",
+    "/js/app.44851725dad3e0acb64f.hot-update.js": "/js/app.44851725dad3e0acb64f.hot-update.js",
+    "/js/app.0e85e595beaf5780150a.hot-update.js": "/js/app.0e85e595beaf5780150a.hot-update.js",
+    "/js/app.443b067c4760a018c549.hot-update.js": "/js/app.443b067c4760a018c549.hot-update.js",
+    "/js/app.0fa4c3629a2acfff1344.hot-update.js": "/js/app.0fa4c3629a2acfff1344.hot-update.js",
+    "/js/app.c7fe56b8994d74697849.hot-update.js": "/js/app.c7fe56b8994d74697849.hot-update.js",
+    "/js/app.7c56773a1a8b8bdf8e37.hot-update.js": "/js/app.7c56773a1a8b8bdf8e37.hot-update.js",
+    "/js/app.e2e4e0ecabbb87fe55e5.hot-update.js": "/js/app.e2e4e0ecabbb87fe55e5.hot-update.js",
+    "/js/app.dd1987ca3c8575f63b3c.hot-update.js": "/js/app.dd1987ca3c8575f63b3c.hot-update.js",
+    "/js/app.4937825ec6b625fa1c9a.hot-update.js": "/js/app.4937825ec6b625fa1c9a.hot-update.js",
+    "/js/app.aff503bb2b508857af8d.hot-update.js": "/js/app.aff503bb2b508857af8d.hot-update.js",
+    "/js/app.a7bc85324dc679d40da0.hot-update.js": "/js/app.a7bc85324dc679d40da0.hot-update.js",
+    "/js/app.2389c77190c5dc6164f9.hot-update.js": "/js/app.2389c77190c5dc6164f9.hot-update.js",
+    "/js/app.b188aa6254cdc133a895.hot-update.js": "/js/app.b188aa6254cdc133a895.hot-update.js",
+    "/js/app.6b81290cbb523201158f.hot-update.js": "/js/app.6b81290cbb523201158f.hot-update.js"
 }
