--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -68,5 +68,6 @@
     "/js/app.a7bc85324dc679d40da0.hot-update.js": "/js/app.a7bc85324dc679d40da0.hot-update.js",
     "/js/app.2389c77190c5dc6164f9.hot-update.js": "/js/app.2389c77190c5dc6164f9.hot-update.js",
     "/js/app.b188aa6254cdc133a895.hot-update.js": "/js/app.b188aa6254cdc133a895.hot-update.js",
-    "/js/app.6b81290cbb523201158f.hot-update.js": "/js/app.6b81290cbb523201158f.hot-update.js"
+    "/js/app.6b81290cbb523201158f.hot-update.js": "/js/app.6b81290cbb523201158f.hot-update.js",
+    "/js/app.e7b1cea7863181d25617.hot-update.js": "/js/app.e7b1cea7863181d25617.hot-update.js"
 }
