--- a/composer.json
+++ b/composer.json
@@ -17,11 +17,11 @@
         "laravel/sanctum": "^2.4",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
-        "tightenco/ziggy": "^0.9.4"
+        "tightenco/ziggy": "^0.9.4",
+        "fzaninotto/faker": "^1.9.1"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
-        "fzaninotto/faker": "^1.9.1",
         "miaababikir/laravel-tailwind-dashboard-preset": "dev-master",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^4.1",
