--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,144 @@
 {
     "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/css/app.css": "/css/app.css",
+    "/js/app.5e23d5915c825738ee07.hot-update.js": "/js/app.5e23d5915c825738ee07.hot-update.js",
+    "/js/app.a0ddf81b4b41a1b98e7c.hot-update.js": "/js/app.a0ddf81b4b41a1b98e7c.hot-update.js",
+    "/js/app.79acc69e90399a493cfe.hot-update.js": "/js/app.79acc69e90399a493cfe.hot-update.js",
+    "/js/app.67170c52783cb2b5c386.hot-update.js": "/js/app.67170c52783cb2b5c386.hot-update.js",
+    "/js/app.9a6f5516e97b1ebc0d91.hot-update.js": "/js/app.9a6f5516e97b1ebc0d91.hot-update.js",
+    "/js/app.fb761e60ebf761897309.hot-update.js": "/js/app.fb761e60ebf761897309.hot-update.js",
+    "/js/app.b0d099dc6a98197f1bb3.hot-update.js": "/js/app.b0d099dc6a98197f1bb3.hot-update.js",
+    "/js/app.3c9eed6a42adb2c912b0.hot-update.js": "/js/app.3c9eed6a42adb2c912b0.hot-update.js",
+    "/js/app.9178e4ee636ec094f9c8.hot-update.js": "/js/app.9178e4ee636ec094f9c8.hot-update.js",
+    "/js/app.8fbfdf1e9fb6841244ea.hot-update.js": "/js/app.8fbfdf1e9fb6841244ea.hot-update.js",
+    "/js/app.d8859d08313fc3ce5ed8.hot-update.js": "/js/app.d8859d08313fc3ce5ed8.hot-update.js",
+    "/js/app.6f68f15c1de381a0ecbe.hot-update.js": "/js/app.6f68f15c1de381a0ecbe.hot-update.js",
+    "/js/app.9889d83d543c8faaf3af.hot-update.js": "/js/app.9889d83d543c8faaf3af.hot-update.js",
+    "/js/app.68fda243e6557b1c8dd0.hot-update.js": "/js/app.68fda243e6557b1c8dd0.hot-update.js",
+    "/js/app.a4904781f3d4c6b717f6.hot-update.js": "/js/app.a4904781f3d4c6b717f6.hot-update.js",
+    "/js/app.c1f549ea1441fd4e1b62.hot-update.js": "/js/app.c1f549ea1441fd4e1b62.hot-update.js",
+    "/js/app.d3426b4c46efac556d91.hot-update.js": "/js/app.d3426b4c46efac556d91.hot-update.js",
+    "/js/app.76a16d8a1c54ef7dfbc9.hot-update.js": "/js/app.76a16d8a1c54ef7dfbc9.hot-update.js",
+    "/js/app.d8ad09e9215fcb0744a3.hot-update.js": "/js/app.d8ad09e9215fcb0744a3.hot-update.js",
+    "/js/app.7661c4a2473bbc269873.hot-update.js": "/js/app.7661c4a2473bbc269873.hot-update.js",
+    "/js/app.3d3b39347e38273254da.hot-update.js": "/js/app.3d3b39347e38273254da.hot-update.js",
+    "/js/app.1547a1d26454ffa42600.hot-update.js": "/js/app.1547a1d26454ffa42600.hot-update.js",
+    "/js/app.3802773d27fe961780f5.hot-update.js": "/js/app.3802773d27fe961780f5.hot-update.js",
+    "/js/app.1ddacc2eb51ba7d0f1db.hot-update.js": "/js/app.1ddacc2eb51ba7d0f1db.hot-update.js",
+    "/js/app.37721e0872f418e99d47.hot-update.js": "/js/app.37721e0872f418e99d47.hot-update.js",
+    "/js/app.b124a3e3b8358926fe3a.hot-update.js": "/js/app.b124a3e3b8358926fe3a.hot-update.js",
+    "/js/app.31406e7135337f663a00.hot-update.js": "/js/app.31406e7135337f663a00.hot-update.js",
+    "/js/app.c369d2da2e2da8fe28a4.hot-update.js": "/js/app.c369d2da2e2da8fe28a4.hot-update.js",
+    "/js/app.a13c1ffe0624dc9f1fdc.hot-update.js": "/js/app.a13c1ffe0624dc9f1fdc.hot-update.js",
+    "/js/app.fd9a32ecf12390e03efe.hot-update.js": "/js/app.fd9a32ecf12390e03efe.hot-update.js",
+    "/js/app.045893e92c81aa137e5d.hot-update.js": "/js/app.045893e92c81aa137e5d.hot-update.js",
+    "/js/app.efdd1a2ce46df93fc2f5.hot-update.js": "/js/app.efdd1a2ce46df93fc2f5.hot-update.js",
+    "/js/app.dc3dc73c37287aec6236.hot-update.js": "/js/app.dc3dc73c37287aec6236.hot-update.js",
+    "/js/app.fb76c81726fb10c9c4df.hot-update.js": "/js/app.fb76c81726fb10c9c4df.hot-update.js",
+    "/js/app.f3f1528dff72d45447d8.hot-update.js": "/js/app.f3f1528dff72d45447d8.hot-update.js",
+    "/js/app.c872748f023a5f8431f5.hot-update.js": "/js/app.c872748f023a5f8431f5.hot-update.js",
+    "/js/app.e5d2e9e9dffa4f2ec743.hot-update.js": "/js/app.e5d2e9e9dffa4f2ec743.hot-update.js",
+    "/js/app.e2b383fe3101b90f1a96.hot-update.js": "/js/app.e2b383fe3101b90f1a96.hot-update.js",
+    "/js/app.17406408b80082ef4caf.hot-update.js": "/js/app.17406408b80082ef4caf.hot-update.js",
+    "/js/app.d03222b400e6fd00309f.hot-update.js": "/js/app.d03222b400e6fd00309f.hot-update.js",
+    "/js/app.8a097184dae4177e1eb2.hot-update.js": "/js/app.8a097184dae4177e1eb2.hot-update.js",
+    "/js/app.c69f2b31652933894388.hot-update.js": "/js/app.c69f2b31652933894388.hot-update.js",
+    "/js/app.9f9e36f6adf952963b28.hot-update.js": "/js/app.9f9e36f6adf952963b28.hot-update.js",
+    "/js/app.f18f552d58da557024c2.hot-update.js": "/js/app.f18f552d58da557024c2.hot-update.js",
+    "/js/app.dafac6ef0714a22e7a2e.hot-update.js": "/js/app.dafac6ef0714a22e7a2e.hot-update.js",
+    "/js/app.304e8285a54284dcb62c.hot-update.js": "/js/app.304e8285a54284dcb62c.hot-update.js",
+    "/js/app.c77cf1647e7e45688cf5.hot-update.js": "/js/app.c77cf1647e7e45688cf5.hot-update.js",
+    "/js/app.7554b9b48c6f3895563c.hot-update.js": "/js/app.7554b9b48c6f3895563c.hot-update.js",
+    "/js/app.8731a2e3506150eeacb2.hot-update.js": "/js/app.8731a2e3506150eeacb2.hot-update.js",
+    "/js/app.1cc967382c49d6082e34.hot-update.js": "/js/app.1cc967382c49d6082e34.hot-update.js",
+    "/js/app.642971024df65466558e.hot-update.js": "/js/app.642971024df65466558e.hot-update.js",
+    "/js/app.2e32fb6758c629b77b1e.hot-update.js": "/js/app.2e32fb6758c629b77b1e.hot-update.js",
+    "/js/app.7f990c5e95800c33c17e.hot-update.js": "/js/app.7f990c5e95800c33c17e.hot-update.js",
+    "/js/app.93771eb11138342a6c56.hot-update.js": "/js/app.93771eb11138342a6c56.hot-update.js",
+    "/js/app.ad1ce17d618bd016e83d.hot-update.js": "/js/app.ad1ce17d618bd016e83d.hot-update.js",
+    "/js/app.41df39d86c5e56b2b958.hot-update.js": "/js/app.41df39d86c5e56b2b958.hot-update.js",
+    "/js/app.0f100aedbcd77239942f.hot-update.js": "/js/app.0f100aedbcd77239942f.hot-update.js",
+    "/js/app.a29f25a3f6fd84c0f000.hot-update.js": "/js/app.a29f25a3f6fd84c0f000.hot-update.js",
+    "/js/app.c3f0af1aabeedf737b8b.hot-update.js": "/js/app.c3f0af1aabeedf737b8b.hot-update.js",
+    "/js/app.575987219a86a90619ba.hot-update.js": "/js/app.575987219a86a90619ba.hot-update.js",
+    "/js/app.d60eb538ad96c3920d8a.hot-update.js": "/js/app.d60eb538ad96c3920d8a.hot-update.js",
+    "/js/app.2e8bd5eee3092ca3ed29.hot-update.js": "/js/app.2e8bd5eee3092ca3ed29.hot-update.js",
+    "/js/app.3df8c16a2c5134180925.hot-update.js": "/js/app.3df8c16a2c5134180925.hot-update.js",
+    "/js/app.c828cfbf1cfd17d92e48.hot-update.js": "/js/app.c828cfbf1cfd17d92e48.hot-update.js",
+    "/js/app.75666a06cfa3a2dc5081.hot-update.js": "/js/app.75666a06cfa3a2dc5081.hot-update.js",
+    "/js/app.26e31fc7888a7b105b07.hot-update.js": "/js/app.26e31fc7888a7b105b07.hot-update.js",
+    "/js/app.a7c5ed79cb1b08b1d73e.hot-update.js": "/js/app.a7c5ed79cb1b08b1d73e.hot-update.js",
+    "/js/app.0274284ce57f8d7319aa.hot-update.js": "/js/app.0274284ce57f8d7319aa.hot-update.js",
+    "/js/app.76839e2ca0860eefb6d6.hot-update.js": "/js/app.76839e2ca0860eefb6d6.hot-update.js",
+    "/js/app.be71ecd4896b308bdab7.hot-update.js": "/js/app.be71ecd4896b308bdab7.hot-update.js",
+    "/js/app.00392b8b0291794f223f.hot-update.js": "/js/app.00392b8b0291794f223f.hot-update.js",
+    "/js/app.8e2e79b0878e7bd9f2b2.hot-update.js": "/js/app.8e2e79b0878e7bd9f2b2.hot-update.js",
+    "/js/app.e71ffa3f94a5b91fc84f.hot-update.js": "/js/app.e71ffa3f94a5b91fc84f.hot-update.js",
+    "/js/app.b9c2e9a09806e6842606.hot-update.js": "/js/app.b9c2e9a09806e6842606.hot-update.js",
+    "/js/app.33983ccf59cec904d19e.hot-update.js": "/js/app.33983ccf59cec904d19e.hot-update.js",
+    "/js/app.2a753c528d9a7affa0ca.hot-update.js": "/js/app.2a753c528d9a7affa0ca.hot-update.js",
+    "/js/app.9494eece0a70362a6ad1.hot-update.js": "/js/app.9494eece0a70362a6ad1.hot-update.js",
+    "/js/app.38e02ca878bfce8848e4.hot-update.js": "/js/app.38e02ca878bfce8848e4.hot-update.js",
+    "/js/app.af3716ddbe001c96eb4f.hot-update.js": "/js/app.af3716ddbe001c96eb4f.hot-update.js",
+    "/js/app.f962de68aa9ad66040be.hot-update.js": "/js/app.f962de68aa9ad66040be.hot-update.js",
+    "/js/app.4b7b81d58cb1caaa0973.hot-update.js": "/js/app.4b7b81d58cb1caaa0973.hot-update.js",
+    "/js/app.cc7e5cfff7eb331d6be9.hot-update.js": "/js/app.cc7e5cfff7eb331d6be9.hot-update.js",
+    "/js/app.3fce8acac6c4d8982178.hot-update.js": "/js/app.3fce8acac6c4d8982178.hot-update.js",
+    "/js/app.99e2c8b21fdc272ed88b.hot-update.js": "/js/app.99e2c8b21fdc272ed88b.hot-update.js",
+    "/js/app.83a1a3feb7dc06eeac6d.hot-update.js": "/js/app.83a1a3feb7dc06eeac6d.hot-update.js",
+    "/js/app.5840816a191d1dfd806f.hot-update.js": "/js/app.5840816a191d1dfd806f.hot-update.js",
+    "/js/app.9ae81ae514cadc36e449.hot-update.js": "/js/app.9ae81ae514cadc36e449.hot-update.js",
+    "/js/app.5880e7faff4589fd04a6.hot-update.js": "/js/app.5880e7faff4589fd04a6.hot-update.js",
+    "/js/app.af7c385f18fe14f25b5c.hot-update.js": "/js/app.af7c385f18fe14f25b5c.hot-update.js",
+    "/js/app.dafb1de32be40e5b1194.hot-update.js": "/js/app.dafb1de32be40e5b1194.hot-update.js",
+    "/js/app.20b4436eb8c4630a6d7f.hot-update.js": "/js/app.20b4436eb8c4630a6d7f.hot-update.js",
+    "/js/app.577eac8ff42bb45d0601.hot-update.js": "/js/app.577eac8ff42bb45d0601.hot-update.js",
+    "/js/app.b5234777ebe42548fbb3.hot-update.js": "/js/app.b5234777ebe42548fbb3.hot-update.js",
+    "/js/app.d86420842058318719a5.hot-update.js": "/js/app.d86420842058318719a5.hot-update.js",
+    "/js/app.649ddb6675659d54ca5d.hot-update.js": "/js/app.649ddb6675659d54ca5d.hot-update.js",
+    "/js/app.d822cbc18a356832fd44.hot-update.js": "/js/app.d822cbc18a356832fd44.hot-update.js",
+    "/js/app.630ca2e99e12a00f38c9.hot-update.js": "/js/app.630ca2e99e12a00f38c9.hot-update.js",
+    "/js/app.2105d865408be1d58c6d.hot-update.js": "/js/app.2105d865408be1d58c6d.hot-update.js",
+    "/js/app.28bebd05d7dc528f1f35.hot-update.js": "/js/app.28bebd05d7dc528f1f35.hot-update.js",
+    "/js/app.c63112548b268713dad3.hot-update.js": "/js/app.c63112548b268713dad3.hot-update.js",
+    "/js/app.3083f54007a0de787cdf.hot-update.js": "/js/app.3083f54007a0de787cdf.hot-update.js",
+    "/js/app.c59cb454784162c43705.hot-update.js": "/js/app.c59cb454784162c43705.hot-update.js",
+    "/js/app.0130e41b3363fe71837c.hot-update.js": "/js/app.0130e41b3363fe71837c.hot-update.js",
+    "/js/app.6ca1b0e65a676b868302.hot-update.js": "/js/app.6ca1b0e65a676b868302.hot-update.js",
+    "/js/app.d2255ee666a095cbb1d4.hot-update.js": "/js/app.d2255ee666a095cbb1d4.hot-update.js",
+    "/js/app.bbf28a7f775dd1c7e84c.hot-update.js": "/js/app.bbf28a7f775dd1c7e84c.hot-update.js",
+    "/js/app.b3ae140f51fd47cac308.hot-update.js": "/js/app.b3ae140f51fd47cac308.hot-update.js",
+    "/js/app.16388779d0c13c93c382.hot-update.js": "/js/app.16388779d0c13c93c382.hot-update.js",
+    "/js/app.28a026acf1eb2b665fb0.hot-update.js": "/js/app.28a026acf1eb2b665fb0.hot-update.js",
+    "/js/app.9871e26ade96b00e60cf.hot-update.js": "/js/app.9871e26ade96b00e60cf.hot-update.js",
+    "/js/app.d25d28467e3b1c77200d.hot-update.js": "/js/app.d25d28467e3b1c77200d.hot-update.js",
+    "/js/app.ed90cb71f5b55fa17dac.hot-update.js": "/js/app.ed90cb71f5b55fa17dac.hot-update.js",
+    "/js/app.4bf0d27a68ae63ce3abf.hot-update.js": "/js/app.4bf0d27a68ae63ce3abf.hot-update.js",
+    "/js/app.7b641268e050672ce31a.hot-update.js": "/js/app.7b641268e050672ce31a.hot-update.js",
+    "/js/app.4196a1968d71f6ffd92f.hot-update.js": "/js/app.4196a1968d71f6ffd92f.hot-update.js",
+    "/js/app.dc749c93a00c795774aa.hot-update.js": "/js/app.dc749c93a00c795774aa.hot-update.js",
+    "/js/app.1939c8357898086cf237.hot-update.js": "/js/app.1939c8357898086cf237.hot-update.js",
+    "/js/app.93f3329343cbffaf43d0.hot-update.js": "/js/app.93f3329343cbffaf43d0.hot-update.js",
+    "/js/app.4e5c94b0023dcad8faa4.hot-update.js": "/js/app.4e5c94b0023dcad8faa4.hot-update.js",
+    "/js/app.96de73d81d5c743a4444.hot-update.js": "/js/app.96de73d81d5c743a4444.hot-update.js",
+    "/js/app.a9513beea0609f045406.hot-update.js": "/js/app.a9513beea0609f045406.hot-update.js",
+    "/js/app.0b14ddb5813880acfb72.hot-update.js": "/js/app.0b14ddb5813880acfb72.hot-update.js",
+    "/js/app.6d4995beab75c207b54d.hot-update.js": "/js/app.6d4995beab75c207b54d.hot-update.js",
+    "/js/app.1c008b71d538dc78f799.hot-update.js": "/js/app.1c008b71d538dc78f799.hot-update.js",
+    "/js/app.57c2115cbd4898bf24d3.hot-update.js": "/js/app.57c2115cbd4898bf24d3.hot-update.js",
+    "/js/app.33a04f7aeebc0da9d5af.hot-update.js": "/js/app.33a04f7aeebc0da9d5af.hot-update.js",
+    "/js/app.4385a4a99a18c5bc4dd4.hot-update.js": "/js/app.4385a4a99a18c5bc4dd4.hot-update.js",
+    "/js/app.12ea4d00d8471b8d7306.hot-update.js": "/js/app.12ea4d00d8471b8d7306.hot-update.js",
+    "/js/app.9eb265eebaecfd126d82.hot-update.js": "/js/app.9eb265eebaecfd126d82.hot-update.js",
+    "/js/app.d65d42845e12f6053e0e.hot-update.js": "/js/app.d65d42845e12f6053e0e.hot-update.js",
+    "/js/app.3e57be26b42164bd062e.hot-update.js": "/js/app.3e57be26b42164bd062e.hot-update.js",
+    "/js/app.9bd48d151f3062d2bf17.hot-update.js": "/js/app.9bd48d151f3062d2bf17.hot-update.js",
+    "/js/app.944f8fcd4323fa369158.hot-update.js": "/js/app.944f8fcd4323fa369158.hot-update.js",
+    "/js/app.e16a9ad6af297491b4e8.hot-update.js": "/js/app.e16a9ad6af297491b4e8.hot-update.js",
+    "/js/app.d0a4dad4cda5e66bac59.hot-update.js": "/js/app.d0a4dad4cda5e66bac59.hot-update.js",
+    "/js/app.8147fae93d2e0c24455b.hot-update.js": "/js/app.8147fae93d2e0c24455b.hot-update.js",
+    "/js/app.fc521071d15dee5ec6fb.hot-update.js": "/js/app.fc521071d15dee5ec6fb.hot-update.js",
+    "/js/app.e76d5c8d2c29e44d0413.hot-update.js": "/js/app.e76d5c8d2c29e44d0413.hot-update.js",
+    "/js/app.a8d78b777893b4c4da00.hot-update.js": "/js/app.a8d78b777893b4c4da00.hot-update.js",
+    "/js/app.ce25f47cf7e889f9f0fd.hot-update.js": "/js/app.ce25f47cf7e889f9f0fd.hot-update.js"
 }
